'--
@startuml

skinparam defaultFontName Hasklig
skinparam dpi 150

'==

enum Label {
  GIVE,
  TAKE,
  PLUS
  toString(): string
}

class Operation {
  - id   : int
  - name : string
  - label: Label
  - value: int
  __
  + Operation(id: int, name: string, label: Label, value: int)
  + toString() : String
  __
  + getId()   : int
  + getName() : string
  + getLabel(): Label
}

class Client {
  - name: string
  - limite: int
  - operations: List<Operation*>
  __
  + Client(name: string, limite: int)
  + toString() : String
  __
  + getName() : string
  + getLimite() : int
  + getOperations() : List<Operation*>
  + addOperation(name: string, label: Label, value: int)
  __
  + getBalance() : int
}

class Agiota {
  - alive_list : List<Client>
  - death_list : List<Client>
  - alive_oper : List<Operation*>
  - death_oper : List<Operation*>
  - nextOpId : int
  __
  - searchClient(name: string) : int
  - pushOperation(client: Client, name: string, label: Label, value: int)
  __
  + Agiota()
  + getClient(name: string) : Client*
  + addClient(name: string, limite: int)
  + give(name: string, value: int)
  + take(name: string, value: int)
  + kill(name: string)
  + plus()
  __
  + toString() : String
}

'--
Client "1" o--  "0..*" Operation
Agiota "1" *--  "0..*" Operation
Agiota "1" *--  "0..*" Client

@enduml